# PBD-X-Kevin

./: CMakeLists.txt
src/: main.cpp
src/core/: PointMass.cpp  PointMass.h  Spring.h  Vector2D.h
src/objects/: ClothObject.h  RopeObject.cpp  RopeObject.h
src/simulation/: Simulation.cpp  Simulation.h
src/utils/: Constants.h
